@@ -154,6 +154,16 @@ in <strong>Directory-based Tasks</strong>, and see the
       <em>Since Ant 1.6.2</em></td>
     <td align="center" valign="top">No, default &quot;false&quot;</td>
   </tr>
+  <tr>
+    <td valign="top">removeNotFollowedSymlinks</td>
+    <td valign="top">
+      Whether symbolic links (not the files/directories they link to)
+      should be removed if they haven't been followed because
+      followSymlinks was false or the maximum number of symbolic links
+      was too big.
+      <em>Since Ant 1.8.0</em></td>
+    <td align="center" valign="top">No, default &quot;false&quot;</td>
+  </tr>
 </table>
 
 <h3>Examples</h3>
